No we still haven't reached any goals yet

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,6 +20,6 @@
   <%= label_tag :admin %>
   <%= check_box_tag :'user[admin]' %><br>
 <br>
-  <%= submit_tag "Create Account" %>
+  <%= submit_tag 'Create User' %>
 
 <% end %>
